# breakout

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh
include/: .#dock.h  SDL2Window.h  assets.h  ball.h  brick.h  button.h  clock.h  collison_engine.h  color.h  constants.h  dock.h  game.h  game_controller.h  grid.h  object.h  position.h  rectangle.h  rectangle_brick.h  utils.h  vector2D.h
include/bonus/: .#bonus_manager.h  bonus.h  bonus_manager.h  extra_life.h  multi_ball.h  speed_ball.h
include/gui/: SDL2Window.h  assets.h  background.h  button_interface.h  color.h  levels.h  menu.h  pause.h
include/object/: ball.h  brick.h  dock.h  line.h  object.h  rectangle.h  rectangle_brick.h  triangle.h  triangle_brick.h
include/states/: game_state.h  level_state.h  levels_menu_state.h  loose_level_state.h  main_menu_state.h  menu_state.h  pause_state.h  state_manager.h  win_level_state.h
include/utils/: clock.h  constants.h  direction.h  randomiser.h  utils.h  vector2D.h
levels/: level_01  level_2  level_3  level_4  level_5  level_6  level_7
src/: SDL2Window.cpp  assets.cpp  ball.cpp  brick.cpp  button.cpp  collision_engine.cpp  dock.cpp  game.cpp  game_controller.cpp  grid.cpp  main.cpp  object.cpp  rectangle.cpp  rectangle_brick.cpp  vector2D.cpp
src/bonus/: bonus.cpp  bonus_manager.cpp  extra_life.cpp  multi_ball.cpp  speed_ball.cpp
src/gui/: SDL2Window.cpp  assets.cpp  background.cpp  button_interface.cpp  levels.cpp  menu.cpp  pause.cpp
src/object/: ball.cpp  brick.cpp  dock.cpp  line.cpp  object.cpp  rectangle.cpp  rectangle_brick.cpp  triangle.cpp  triangle_brick.cpp
src/states/: level_state.cpp  levels_menu_state.cpp  loose_level_state.cpp  main_menu_state.cpp  menu_state.cpp  pause_state.cpp  win_level_state.cpp
src/utils/: direction.cpp  vector2D.cpp
